setup .gitignore, enable jdk.incubator.vector