@@ -64,6 +64,10 @@
           <source>17</source>
           <target>17</target>
           <encoding>UTF-8</encoding>
+          <compilerArgs>
+            <arg>--add-modules</arg>
+            <arg>jdk.incubator.vector</arg>
+          </compilerArgs>
         </configuration>
       </plugin>
 
